--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -1,8 +1,10 @@
 doctype html
 html(lang="en")
     head
+        include partials/header.pug
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Inicio Residuos
     body 
+        include partials/nav.pug
