Se añadió header de gobierno y cabecera IPN

--- a/src/views/partials/header.pug
+++ b/src/views/partials/header.pug
@@ -4,3 +4,44 @@ script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundl
 // CSS
 link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x' crossorigin='anonymous')
 link(rel="stylesheet" href="css/style.css")
+
+nav#header.navbar.bg-dark.navbar-dark.navbar-expand-sm.navbar-gob(data-v-27b47ae7='')
+  .container(data-v-27b47ae7='')
+    button.navbar-toggler(data-v-27b47ae7='' type='button' data-toggle='collapse' data-target='#collapsibleNavbar')
+      span.navbar-toggler-icon(data-v-27b47ae7='')
+    a.navbar-brand(data-v-27b47ae7='' href='https://www.gob.mx' target='_blank')
+      img.logos(data-v-27b47ae7='' src='https://framework-gb.cdn.gob.mx/landing/img/logoheader.svg' alt='logo gobierno de méxico' style='width: 8rem; margin-top: -2%; margin-bottom: -2%; margin-left: -15%;')
+    #collapsibleNavbar.collapse.navbar-collapse.justify-content-end(data-v-27b47ae7='' style='background-color: rgb(11, 35, 30);')
+      form.form-inline(data-v-27b47ae7='')
+        ul.navbar-nav(data-v-27b47ae7='')
+            li.nav-item(data-v-27b47ae7='' align='left')
+                a#op00.nav-link(data-v-27b47ae7='' href='https://coronavirus.gob.mx/' target='_blank') Informaci&oacute;n sobre COVID-19
+            li.nav-item.dropdown(data-v-27b47ae7='' align='left')
+                a#op2.nav-link.menu(data-v-27b47ae7='' href='https://www.gob.mx/tramites' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false') Tr&aacute;mites
+            li.nav-item.dropdown(data-v-27b47ae7='')
+                a#op3.nav-link.menu(data-v-27b47ae7='' href='https://www.gob.mx/gobierno' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false') Gobierno
+            button#botonbuscar.btn.btn-default(data-v-27b47ae7='' type='button')
+                a#botbusca(data-v-27b47ae7='' href='https://www.gob.mx/busqueda' target='_blank')
+                    img(data-v-27b47ae7='' alt='Buscar' src='https://framework-gb.cdn.gob.mx/landing/img/lupa.png')
+
+
+
+.cabecera-ipn
+    .utileriasIpn
+        ul.barra-enlace
+            li
+                a(href='https://www.ipn.mx/directorio.html') DIRECTORIO
+                |  |
+            li
+                a(href='https://www.ipn.mx/correo-electronico.html') CORREO ELECTR&Oacute;NICO
+                |  |
+            li
+                a(href='https://www.ipn.mx/calendario-academico.html') CALENDARIO
+                |  |
+            li
+                a(href='https://www.ipn.mx/buzon.html') BUZ&Oacute;N
+    .header-logos
+        .text-center
+            img.plecaGob.gob(src='https://www.residuos.sustentabilidad.ipn.mx/public/img/pleca-gob.png' alt='')
+            a.ipnLogo-enlace(href='https://www.ipn.mx')
+            img.plecaGob(src='https://www.residuos.sustentabilidad.ipn.mx/public/img/pleca-ipn.png' alt='')
