Se añadió footer de gobierno

--- a/src/views/partials/footer.pug
+++ b/src/views/partials/footer.pug
@@ -1,6 +1,6 @@
 footer.main-footer
   .list-info
-    .container
+    .container.marginTop
       .row
         .col-sm-3
           img.logo_footer(data-v-9e928f9a='' src='https://framework-gb.cdn.gob.mx/landing/img/logoheader.svg' href='/' alt='logo gobierno de méxico' style='max-width: 90%;')
@@ -41,7 +41,7 @@ footer.main-footer
           h5 S&iacute;guenos en
           ul.list-inline
             li
-              a.social-icon.facebook(target='_blank' rel='noopener' title='Enlace abre en ventana nueva' href='https://www.facebook.com/gobmexico' aria-label='Facebook de presidencia')
+              a.social-icon(target='_blank' rel='noopener' title='Enlace abre en ventana nueva' href='https://www.facebook.com/gobmexico' aria-label='Facebook de presidencia')
             li
               a.social-icon.twitter(target='_blank' rel='noopener' title='Enlace abre en ventana nueva' href='https://twitter.com/GobiernoMX' aria-label='Twitter de presidencia')
   .container-fluid.footer-pleca
