--- a/src/views/agua.pug
+++ b/src/views/agua.pug
@@ -7,7 +7,7 @@ head
 
 body
     include partials/nav.pug
-    .container.marginTop
+    .container.marginTop.marginBottom
         form
             .form-col
                 h5
