--- a/src/views/aice.pug
+++ b/src/views/aice.pug
@@ -7,7 +7,7 @@ head
 
 body
   include partials/nav.pug
-  .container.marginTop
+  .container.marginTop.marginBottom
     .form-col
       h5
         | Responsable del registro actual:
