--- a/src/views/datosResponsable.pug
+++ b/src/views/datosResponsable.pug
@@ -6,7 +6,7 @@ head
   title Responsable actual
 
 include partials/nav.pug
-.container.marginTop
+.container.marginTop.marginBottom
   h5 
     | Responsable del registro actual: 
     p
