--- a/src/views/energia.pug
+++ b/src/views/energia.pug
@@ -9,7 +9,7 @@ head
 
 body
     include partials/nav.pug
-    .container.marginTop
+    .container.marginTop.marginBottom
         form
             .form-col
                 h5
