--- a/src/views/partials/nav.pug
+++ b/src/views/partials/nav.pug
@@ -8,13 +8,15 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
         li.nav-item
           a.nav-link(aria-current='page' href='/') Inicio
         li.nav-item
-          a.nav-link(href='/agua') Agua
+          a.nav-link(href='/agua') Agua <!--Indicador Per capita L/SumPersonas-->
         li.nav-item
-          a.nav-link(href='/energia') Energ&iacute;a
+          a.nav-link(href='/energia') Energ&iacute;a <!--Indicador Per capita Kw/SumPersonas-->
         li.nav-item
-          a.nav-link(href='/aice') AICE
+          a.nav-link(href='/aice') AICE <!--Indicador Per capita m^2/SumPersonas LETRO Resultados RESIDUOS-->
         li.nav-item
           a.nav-link(href='/datos_responsable') Datos del responsable
+        li.nav-item
+          a.nav-link(href='#') Informaci&oacute;n Operativa
         li.nav-item.dropdown
           a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='#' role='button' data-bs-toggle='dropdown' aria-expanded='false')
             | Iniciar Sesi&oacute;n
