--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -2,8 +2,16 @@ body{
     background-color: rgba(255, 13, 13, 0.2);
 }
 
+footer{
+    position: relative;
+    padding: 10px 10px 0px 10px;
+    bottom: 0;
+    width: 100%;
+    height: auto;
+}
+
 .containerText{
-    background: white;
+    background: rgba(255, 255, 255, 2);
     margin-top: 20px;
     margin-bottom: 30px;
     margin-right: 110px;
@@ -16,6 +24,10 @@ body{
     border-radius: 30px;
 }
 
+.containerPregunta{
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
 
 
 .center{
