--- a/src/views/partials/footer.pug
+++ b/src/views/partials/footer.pug
@@ -1,6 +1,6 @@
 footer.main-footer
   .list-info
-    .container.marginTop
+    .container
       .row
         .col-sm-3
           img.logo_footer(data-v-9e928f9a='' src='https://framework-gb.cdn.gob.mx/landing/img/logoheader.svg' href='/' alt='logo gobierno de méxico' style='max-width: 90%;')
