--- a/src/views/partials/footer.pug
+++ b/src/views/partials/footer.pug
@@ -37,15 +37,12 @@ footer.main-footer
               a(href='https://www.gob.mx/sitemap') Mapa de sitio
         .col-sm-3
           h5
-            a(href='https://www.gob.mx/tramites/ficha/presentacion-de-quejas-y-denuncias-en-la-sfp/SFP54') Denuncia contra servidores p&uacute;blicos
-          h5 S&iacute;guenos en
+            a(href='https://www.gob.mx/tramites/ficha/presentacion-de-quejas-y-denuncias-en-la-sfp/SFP54') Denuncia contra servidores públicos
+          h5 Síguenos en
           ul.list-inline
             li
-              a.social-icon(target='_blank' rel='noopener' title='Enlace abre en ventana nueva' href='https://www.facebook.com/gobmexico' aria-label='Facebook de presidencia')
+              a.social-icon.facebook(target='_blank' rel='noopener' title='Enlace abre en ventana nueva' href='https://www.facebook.com/gobmexico' aria-label='Facebook de presidencia')
             li
               a.social-icon.twitter(target='_blank' rel='noopener' title='Enlace abre en ventana nueva' href='https://twitter.com/GobiernoMX' aria-label='Twitter de presidencia')
-  .container-fluid.footer-pleca
-    .row
-      .col
-        br
-        br
+
+
