Se modificaron las pestañas de informacion

--- a/src/views/partials/nav.pug
+++ b/src/views/partials/nav.pug
@@ -1,4 +1,4 @@
-nav.navbar.navbar-expand-lg.navbar-light.bg-light
+nav.navbar.navbar-expand-lg.navbar-light.bg-light.centerText
   .container
     a.navbar-brand(href='#') CPS
     button.navbar-toggler(type='button' data-bs-toggle='collapse' data-bs-target='#navbarNavDropdown' aria-controls='navbarNavDropdown' aria-expanded='false' aria-label='Toggle navigation')
@@ -14,9 +14,9 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light
         li.nav-item
           a.nav-link(href='/aice') AICE <!--Indicador Per capita m^2/SumPersonas LETRO Resultados RESIDUOS-->
         li.nav-item
-          a.nav-link(href='/datos_responsable') Datos del responsable
+          a.nav-link(href='/infoGeneral') Informaci&oacute;n General
         li.nav-item
-          a.nav-link(href='#') Informaci&oacute;n Operativa
+          a.nav-link(href='/infoOperativa') Informaci&oacute;n Operativa
         li.nav-item.dropdown
           a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='#' role='button' data-bs-toggle='dropdown' aria-expanded='false')
             | Iniciar Sesi&oacute;n
