--- a/src/views/energia.pug
+++ b/src/views/energia.pug
@@ -16,7 +16,7 @@ body
                     | Responsable del registro actual:
                     p
         // Pregunta 1
-        .form-group.col-md-6
+        .form-group.col-md-6.containerPregunta
             label(for='pregunta1')
                 | 1. &iquest;Cuenta el inmueble con medidores de consumo de energ&iacute;a
                 | el&eacute;ctrica?
@@ -26,6 +26,7 @@ body
             .custom-control.custom-radio
                 input#opcionNo.custom-control-input(type='radio' name='customRadio')
                 label.custom-control-label(for='opcionNo') No
+        .form-group.col-md-6.containerPregunta
             label(for='pregunta1_1') &iquest;Cuenta con copia de los recibos?
             .custom-control.custom-radio
                 input#opcionSi_1_1.custom-control-input(type='radio' name='customRadio1_1')
@@ -34,7 +35,7 @@ body
                 input#opcionNo_1_1.custom-control-input(type='radio' name='customRadio1_1')
                 label.custom-control-label(for='opcionNo_1_1') No
         // Pregunta 2
-        .form-group.col-md-6
+        .form-group.col-md-6.containerPregunta
             label(for='pregunta2') 2. Ingresa el consumo aproximado por bimestre de los ultimos a&ntilde;o
             table.table
                 thead
@@ -90,7 +91,7 @@ body
                         td
                             input#pregunta2.form-control(type='text' placeholder='kW')
         // Pregunta 3
-        .form-group.col-md-6
+        .form-group.col-md-6.containerPregunta
             label(for='pregunta3')
                 | 3. &iquest;Incluye el inmueble(s) la separaci&oacute;n de circuitos y
                 | disponibilidad
@@ -108,7 +109,7 @@ body
                 input#opcionNunca.custom-control-input(type='radio' name='customRadio2')
                 label.custom-control-label(for='opcionNunca') Nunca
         // Pregunta 4
-        .form-group.col-md-6
+        .form-group.col-md-6.containerPregunta
             label(for='pregunta4')
                 | 4. &iquest;Se incluye control del sistema de iluminaci&oacute;n, en
                 | salones laboratorios y talleres, con apagadores, temporizadores o sensores de
@@ -126,7 +127,7 @@ body
                 input#opcionNunca2.custom-control-input(type='radio' name='customRadio3')
                 label.custom-control-label(for='opcionNunca2') Nunca
         // Pregunta 5
-        .form-group.col-md-6
+        .form-group.col-md-6.containerPregunta
             label(for='pregunta5')
                 | 5. Indique el avance estimado del equipamiento del
                 | sistema de iluminaci&oacute;n en
@@ -148,7 +149,7 @@ body
                 input#opcionNada.custom-control-input(type='radio' name='customRadio4')
                 label.custom-control-label(for='opcionNada') Nada
         // Pregunta 6
-        .form-group.col-md-6
+        .form-group.col-md-6.containerPregunta
             label(for='pregunta6')
                 | 6. Indique la proporci&oacute;n en que se han integrado mecanismos de control
                 | autom&aacute;tico para sus sistemas de iluminaci&oacute;n exterior en pasillos, &aacute;reas verdes y
@@ -169,7 +170,7 @@ body
                 input#opcionNada_6.custom-control-input(type='radio' name='customRadio5')
                 label.custom-control-label(for='opcionNada_6') Nada
         // Pregunta 7
-        .form-group.col-md-6
+        .form-group.col-md-6.containerPregunta
             label(for='pregunta7')
                 | 7. &iquest;Cuenta con estrategias que le permitan monitorear que cumple con los
                 | niveles recomendados en materia de las densidades de potencia el&eacute;ctrica y alumbrado de los
@@ -185,7 +186,7 @@ body
                 label.custom-control-label(for='opcionOtro_7') Otro
             input.form-control(for='opcionOtro_7' type='text' placeholder='Indique su respuesta')
         // Pregunta 8
-        .form-group.col-md-6
+        .form-group.col-md-6.containerPregunta
             label(for='pregunta8')
                 | 8. &iquest;Cumple con los niveles recomendados en materia de alumbrado para
                 | estacionamientos y espacios abiertos y que cuentan con control de flujo luminoso a zonas de
@@ -197,11 +198,11 @@ body
                 input#opcionNo_8.custom-control-input(type='radio' name='customRadio7')
                 label.custom-control-label(for='opcionNo_8') No
         // Pregunta 9
-        .form-group.col-md-6
+        .form-group.col-md-6.containerPregunta
             label(for='pregunta9') 9. &iquest;C&oacute;mo prev&eacute; resolver las deficiencias?
             input#pregunta9.form-control(type='text' placeholder='Indique su respuesta')
         // Pregunta 10
-        .form-group.col-md-6
+        .form-group.col-md-6.containerPregunta
             label(for='pregunta10')
                 | 10. &iquest;En qu&eacute; proporci&oacute;n se ha incluido en las instalaciones, el uso de
                 | timers, sensores de movimiento o nuevas tecnolog&iacute;as como luminarias solares?
@@ -221,7 +222,7 @@ body
                 input#opcion0_10.custom-control-input(type='radio' name='customRadio8')
                 label.custom-control-label(for='opcion0_10') 0 %
         // Pregunta 11
-        .form-group.col-md-6
+        .form-group.col-md-6.containerPregunta
             label(for='pregunta11')
                 | 11. &iquest;En qu&eacute; proporci&oacute;n se ha incluido en las instalaciones el uso de
                 | nuevas tecnolog&iacute;as de alimentaci&oacute;n con energ&iacute;a alterna a trav&eacute;s de la instalaci&oacute;n de celdas
