--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,4 +1,5 @@
 body{
+    background-image: url(../img/buuble_pattern.png);
     font-family: Roboto,"Open Sans",sans-serif;
     font-size: small;
     font-weight: 400;
@@ -9,8 +10,12 @@ body h5{
     font-size: 15px;
 }
 
-body::before{
-    opacity: .9;
+.form-control{
+    font-size: 12px;
+}
+
+input::placeholder{
+    font-size: 12px;
 }
 
 .container {
@@ -22,7 +27,7 @@ body::before{
 }
 
 .containerText{
-    background: rgba(192, 192, 192, 0.5);
+    background: rgba(149, 204, 214, 0.5);
     margin-top: 20px;
     margin-bottom: 30px;
     margin-right: 110px;
@@ -32,7 +37,7 @@ body::before{
     padding-right: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
-    border-radius: 30px;
+    border-radius: 25px;
 }
 
 .containerPregunta{
@@ -40,8 +45,7 @@ body::before{
     margin-bottom: 10px;
 }
 
-
-.center{
+.centerLogin{
     margin-top: 300px;
     margin-bottom: 1px;
     position: relative;
@@ -52,16 +56,16 @@ body::before{
     transform: translate(-50%, -50%);
     width: 400px;
     border-radius: 30px;
-    background: white;
+    background: rgba(149, 204, 214, 0.5);
 } 
 
-.center h1{
+.centerLogin h1{
     text-align: center;
     padding: 0 0 20px 0;
     border-bottom: 1px solid silver;
 }
 
-.center form{
+.centerLogin form{
     padding: 0 40px;
     box-sizing: border-box;
 }
@@ -86,7 +90,7 @@ form .txt_field{
     position: absolute;
     top: 50%;
     left: 5px;
-    color: #adadad;
+    color: #4e4e4e;
     transform: translateY(-50%);
     font-size: 16px;
     pointer-events: none;
@@ -99,14 +103,14 @@ form .txt_field{
     left: 0;
     width: 100%;
     height: 2px;
-    background: #1dc4a0;
+    background: rgba(105, 232, 255, 0.5);
     transition: .10s;
 }
 
 .txt_field input:focus ~ label,
 .txt_field input:valid ~ label{
     top: -5px;
-    color: #1dc4a0;
+    color: #000000;
 }
 
 .txt_field input:focus ~ span::before,
@@ -118,7 +122,7 @@ input[type="submit"]{
     width: 100%;
     height: 50px;
     border: 1px solid;
-    background: #1dc4a0;
+    background: rgb(92, 183, 199);
     border-radius: 25px;
     font-size: 18px;
     color: #e9f4fb;
@@ -128,19 +132,19 @@ input[type="submit"]{
 }
 
 input[type="submit"]:hover{
-    border-color: #1dc4a0;
+    border-color: rgb(105, 232, 255);
     transition: .5s;
 }
 
 .text-center {
     text-align: center;
 }
+
 .list-info{
     background-size: cover;
     background-position: bottom;
     padding: 30px 10px 10px;
 }
-
 
 a {
     text-decoration: none;
