Se modificó el estilo

--- a/src/views/agua.pug
+++ b/src/views/agua.pug
@@ -9,7 +9,7 @@ body
     include partials/nav.pug
     .containerText
         form
-            .form-col
+            .form-col.containerPregunta
                 h5
                     | Responsable del registro actual:
                     p
