--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -8,7 +8,7 @@ html(lang="en")
         title Login - Plataforma CPS
 body 
     include partials/nav.pug
-    .center
+    .centerLogin
         h1 Iniciar Sesión
         form(method="post")
             .txt_field
