--- a/src/views/infoGeneral.pug
+++ b/src/views/infoGeneral.pug
@@ -7,65 +7,68 @@ head
 body
 include partials/nav.pug
 .containerText
-  .form-group.row
-    label.col-form-label.col-md-3 Dependencia politécnica
-    .col-sm-6
-      input.form-control.h-75(type="text" disabled="disabled" placeholder="Nombre_Dependencia")
-  .form-group.row
-    label.col-form-label.col-md-3 Responsable del reporte *
-    .col-sm-6
-      input.form-control.h-75(type="text")
-  .form-group.row
-    label.col-form-label.col-md-3 &Aacute;rea de adscripci&oacute;n *
-    .col-sm-6
-      input.form-control.h-75(type="text")
-  .form-group.row
-    label.col-form-label.col-md-3 Tipo de plaza *
-    .col-sm-6
-      select.form-control.h-75
-        option(selected) --
-        option Base 
-        option Interinato 
-        option Confianza 
-        option Otro
-  .form-group.row
-    label.col-form-label.col-md-3 Funci&oacute;n en el Comit&eacute; Ambiental *
-    .col-sm-6
-      select.form-control.h-75
-        option(selected) --
-        option Titular 
-        option Representante del titular 
-        option Subdirector Administrativo
-        option Jefe de mantenimiento y servicios
-        option Otro
-  .form-group.row
-    label.col-form-label.col-md-3 Correo electr&oacute;nico * 
-    .col-sm-6
-      input.form-control.h-75(type="text")
-  .form-group.row
-    label.col-form-label.col-md-3 Extensi&oacute;n * 
-    .col-sm-6
-      input.form-control.h-75(type="text")
-  .form-group.row
-    label.col-form-label.col-md-3 Estado * 
-    .col-sm-6
-      input.form-control.h-75(type="text")
-  .form-group.row
-    label.col-form-label.col-md-3 Delegaci&oacute;n / Municipio * 
-    .col-sm-6
-      input.form-control.h-75(type="text")
-  .form-group.row
-    label.col-form-label.col-md-3 Calle y N&uacute;mero * 
-    .col-sm-6
-      input.form-control.h-75(type="text")
-  .form-group.row
-    label.col-form-label.col-md-3 Colonia * 
-    .col-sm-6
-      input.form-control.h-75(type="text")
-  .form-group.row
-    label.col-form-label.col-md-3 C&oacute;digo Postal * 
-    .col-sm-6
-      input.form-control.h-75(type="text")
+  h5.titulos
+    | Informaci&oacute;n General 
+  .combineLabelInput
+    .form-group.row
+      label.col-form-label.col-md-3 Dependencia politécnica&nbsp;
+      .col-sm-4
+        input.form-control.h-75(type="text" disabled="disabled" placeholder="Nombre_Dependencia")
+    .form-group.row
+      label.col-form-label.col-md-3(required) Responsable del reporte *
+      .col-sm-4
+        input.form-control.h-75(type="text")
+    .form-group.row
+      label.col-form-label.col-md-3 &Aacute;rea de adscripci&oacute;n *
+      .col-sm-4
+        input.form-control.h-75(type="text")
+    .form-group.row
+      label.col-form-label.col-md-3 Tipo de plaza *
+      .col-sm-4
+        select.form-control.h-75
+          option(selected) --
+          option Base 
+          option Interinato 
+          option Confianza 
+          option Otro
+    .form-group.row
+      label.col-form-label.col-md-3 Funci&oacute;n en el Comit&eacute; Ambiental *
+      .col-sm-4
+        select.form-control.h-75
+          option(selected) --
+          option Titular 
+          option Representante del titular 
+          option Subdirector Administrativo
+          option Jefe de mantenimiento y servicios
+          option Otro
+    .form-group.row
+      label.col-form-label.col-md-3 Correo electr&oacute;nico * 
+      .col-sm-4
+        input.form-control.h-75(type="text")
+    .form-group.row
+      label.col-form-label.col-md-3 Extensi&oacute;n * 
+      .col-sm-4
+        input.form-control.h-75(type="text")
+    .form-group.row
+      label.col-form-label.col-md-3 Estado * 
+      .col-sm-4
+        input.form-control.h-75(type="text")
+    .form-group.row
+      label.col-form-label.col-md-3 Delegaci&oacute;n / Municipio * 
+      .col-sm-4
+        input.form-control.h-75(type="text")
+    .form-group.row
+      label.col-form-label.col-md-3 Calle y N&uacute;mero * 
+      .col-sm-4
+        input.form-control.h-75(type="text")
+    .form-group.row
+      label.col-form-label.col-md-3 Colonia * 
+      .col-sm-4
+        input.form-control.h-75(type="text")
+    .form-group.row
+      label.col-form-label.col-md-3 C&oacute;digo Postal * 
+      .col-sm-4
+        input.form-control.h-75(type="text")
   
 
 // footer
