--- a/src/views/aice.pug
+++ b/src/views/aice.pug
@@ -25,13 +25,13 @@ body
           | 1. Superficie total del pol&iacute;gono que aloja a la D.P. (en
           | metros
           | cuadrados)*
-        input#inputSuperficieDP(type='text' placeholder='m²')
+        input#inputSuperficieDP.form-control.w-25(type='text' placeholder='m²')
       // Pregunta 2   Dato fijo En caso de modificación... actualizar información
       .form-group.col-md-6.containerPregunta
         label(for='inputSuperficieEyC')
           | 2. Superficie total del pol&iacute;gono ocupada por edificaciones y
           | concreto (en metros cuadrados)*
-        input#inputSuperficieEyC(type='text' placeholder='m²')
+        input#inputSuperficieEyC.form-control.w-25(type='text' placeholder='m²')
       // Pregunta 3   Dato fijo En caso de modificación... actualizar información
       .form-group.col-md-6.containerPregunta
         label(for='inputSuperficieEsinC')
@@ -39,13 +39,13 @@ body
           | destinados
           | a
           | estacionamiento sin concreto (en metros cuadrados)*
-        input#inputSuperficieEsinC(type='text' placeholder='m²')
+        input#inputSuperficieEsinC.form-control.w-25(type='text' placeholder='m²')
       // Pregunta 4    Dato fijo En caso de modificación... actualizar información
       .form-group.col-md-6.containerPregunta
         label(for='inputSuperficieCV')
           | 4. Superficie total del pol&iacute;gono que tiene cubierta vegetal
           | (cubresuelos, &aacute;rboles, arbustos) (en metros cuadrados)*
-        input#inputSuperficieCV(type='text' placeholder='m²')
+        input#inputSuperficieCV.form-control.w-25(type='text' placeholder='m²')
       // Pregunta 5
       .form-group.col-md-6.containerPregunta
         label(for='SuperficieVegetal')
