Se modificó el estilo del formulario

--- a/src/views/infoGeneral.pug
+++ b/src/views/infoGeneral.pug
@@ -9,7 +9,7 @@ include partials/nav.pug
 .containerText
   h5.titulos
     | Informaci&oacute;n General 
-  .combineLabelInput
+  .combineLabelInput.centerForm
     .form-group.row
       label.col-form-label.col-md-3 Dependencia politécnica&nbsp;
       .col-sm-4
