--- a/src/views/infoOperativa.pug
+++ b/src/views/infoOperativa.pug
@@ -13,7 +13,7 @@ include partials/nav.pug
         | Informaci&oacute;n Operativa
     h3
         | N&uacute;mero de usuarios
-    .combineLabelInput
+    .combineLabelInput.centerForm
         .form-group.row
             label.col-form-label.col-md-3 Personal Docente *
             .col-md-2
