--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -10,9 +10,6 @@ body h5{
     font-size: 15px;
 }
 
-.formCentral{
-    text-align: center;
-}
 
 .row {
     margin-right: -15px;
@@ -31,6 +28,11 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0; 
 }
 
+.centerForm{
+    display:block;
+    padding-left: 30%;
+}
+
 .titulos {
     text-transform: uppercase;
     text-align: center;
@@ -45,6 +47,9 @@ input[type=number]::-webkit-outer-spin-button {
 
 .form-control{
     font-size: 12px;
+    padding-bottom: 5px;
+    padding-top: 5px;
+    margin-bottom: 10px;
 }
 
 input::placeholder{
