Se agrego nav para sesion iniciada

--- a/src/views/about.pug
+++ b/src/views/about.pug
@@ -7,6 +7,6 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Acerca De
     body 
-    include partials/nav.pug
+    include partials/navSesion.pug
 
     include partials/footer.pug
