--- a/src/views/agua.pug
+++ b/src/views/agua.pug
@@ -6,7 +6,7 @@ head
     title Agua
 
 body
-    include partials/nav.pug
+    include partials/navSesion.pug
     .containerText
         form
             .form-col.containerPregunta
