--- a/src/views/aice.pug
+++ b/src/views/aice.pug
@@ -6,7 +6,7 @@ head
   title AICE
 
 body
-  include partials/nav.pug
+  include partials/navSesion.pug
   .containerText
     .form-col.containerPregunta
       h5
