--- a/src/views/infoOperativa.pug
+++ b/src/views/infoOperativa.pug
@@ -7,7 +7,7 @@ html(lang="en")
         title Informaci&oacute;n Operativa
 
 body
-include partials/nav.pug
+include partials/navSesion.pug
 .containerText
     h5.titulos
         | Informaci&oacute;n Operativa
