--- a/src/views/energia.pug
+++ b/src/views/energia.pug
@@ -8,7 +8,7 @@ head
 
 
 body
-    include partials/nav.pug
+    include partials/navSesion.pug
     .containerText
         form
             .form-col.containerPregunta
