--- a/src/views/infoGeneral.pug
+++ b/src/views/infoGeneral.pug
@@ -5,7 +5,7 @@ head
   meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
   title Informaci&oacute;n General
 body
-include partials/nav.pug
+include partials/navSesion.pug
 .containerText
   h5.titulos
     | Informaci&oacute;n General 
