--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -7,7 +7,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Login - Plataforma CPS
 body 
-    include partials/nav.pug
+    include partials/navSesion.pug
     .centerLogin
         h1 Iniciar Sesión
         form(method="post")
