--- a/src/views/partials/navSesion.pug
+++ b/src/views/partials/navSesion.pug
@@ -7,25 +7,27 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.centerText
       ul.navbar-nav
         li.nav-item
           a.nav-link(aria-current='page' href='/') Inicio
-        //li.nav-item
-          a.nav-link(href='/agua') Agua // Indicador Per capita L/SumPersonas
-        //li.nav-item
-          a.nav-link(href='/energia') Energ&iacute;a // Indicador Per capita Kw/SumPersonas
-        //li.nav-item
-          a.nav-link(href='/aice') AICE // Indicador Per capita m^2/SumPersonas LETRO Resultados RESIDUOS
-        //li.nav-item
+        li.nav-item
+          a.nav-link(href='/agua') Agua <!--Indicador Per capita L/SumPersonas-->
+        li.nav-item
+          a.nav-link(href='/energia') Energ&iacute;a <!--Indicador Per capita Kw/SumPersonas-->
+        li.nav-item
+          a.nav-link(href='/aice') AICE <!--Indicador Per capita m^2/SumPersonas LETRO Resultados RESIDUOS-->
+        li.nav-item
           a.nav-link(href='/infoGeneral') Informaci&oacute;n General
-        //li.nav-item
+        li.nav-item
           a.nav-link(href='/infoOperativa') Informaci&oacute;n Operativa
         li.nav-item.dropdown
           a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='#' role='button' data-bs-toggle='dropdown' aria-expanded='false')
-            | Iniciar Sesi&oacute;n
+            | Nombre_Dependencia
           ul.dropdown-menu(aria-labelledby='navbarDropdownMenuLink')
             li
-              a.dropdown-item(href='/login') Iniciar Sesi&oacute;n
+              a.dropdown-item(href='#') Cerrar Sesi&oacute;n
             .dropdown-divider
             li
               a.dropdown-item(href='/about') Acerca De 
             li
               a.dropdown-item(href='/contacto') Contacto
             
+        
+              
