--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -10,14 +10,14 @@ body
     include partials/navSesion.pug
     .centerLogin
         h1 Iniciar Sesión
-        form(method="post")
+        form(action="/login" method="POST")
             .txt_field
-                input(type='text' required)
+                input(type='text' name="usuario" required)
                 span
                 label Usuario
             .txt_field
-                input(type='password' required)
+                input(type='password' name="password" required)
                 span
                 label Contrase&ntilde;a
-            input(type='submit' value='Iniciar Sesión')
+            input(type='submit' value='signin')
 include partials/footer.pug
