--- a/src/views/partials/navSesion.pug
+++ b/src/views/partials/navSesion.pug
@@ -19,7 +19,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.centerText
           a.nav-link(href='/infoOperativa') Informaci&oacute;n Operativa
         li.nav-item.dropdown
           a#navbarDropdownMenuLink.nav-link.dropdown-toggle(href='#' role='button' data-bs-toggle='dropdown' aria-expanded='false')
-            | Nombre_Dependencia
+            | nombre_dependencia
           ul.dropdown-menu(aria-labelledby='navbarDropdownMenuLink')
             li
               a.dropdown-item(href='#') Cerrar Sesi&oacute;n
