--- a/src/views/partials/nav.pug
+++ b/src/views/partials/nav.pug
@@ -6,7 +6,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.centerText
     #navbarNavDropdown.collapse.navbar-collapse.ml-auto
       ul.navbar-nav
         li.nav-item
-          a.nav-link(aria-current='page' href='/') Inicio
+          a.nav-link(aria-current='page' href='/inicio') Inicio
         //li.nav-item
           a.nav-link(href='/agua') Agua // Indicador Per capita L/SumPersonas
         //li.nav-item
