Inicio de sesión funcionando

--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -12,7 +12,7 @@ body
         h1 Iniciar Sesión
         form(action="/login" method="POST")
             .txt_field
-                input(type='text' name="usuario" required)
+                input(type='text' name="usuario" autofocus required)
                 span
                 label Usuario
             .txt_field
