--- a/src/views/partials/navSesion.pug
+++ b/src/views/partials/navSesion.pug
@@ -22,7 +22,7 @@ nav.navbar.navbar-expand-lg.navbar-light.bg-light.centerText
             | nombre_dependencia
           ul.dropdown-menu(aria-labelledby='navbarDropdownMenuLink')
             li
-              a.dropdown-item(href='#') Cerrar Sesi&oacute;n
+              a.dropdown-item(href='/login') Cerrar Sesi&oacute;n
             .dropdown-divider
             li
               a.dropdown-item(href='/about') Acerca De 
