Integración de flash-connects mensajes

--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -8,6 +8,7 @@ html(lang="en")
         title Login - Plataforma CPS
 body 
     include partials/navSesion.pug
+    include partials/flashMessages.pug
     .centerLogin
         h1 Iniciar Sesión
         form(action="/login" method="POST")
