variables globales de node en pug

--- a/src/views/infoGeneral.pug
+++ b/src/views/infoGeneral.pug
@@ -13,7 +13,7 @@ include partials/navSesion.pug
     .form-group.row
       label.col-form-label.col-md-3 Dependencia politécnica&nbsp;
       .col-sm-4
-        input.form-control.h-75(type="text" disabled="disabled" placeholder="Nombre_Dependencia")
+        input.form-control.h-75(type="text" disabled="disabled" placeholder= {user})
     .form-group.row
       label.col-form-label.col-md-3(required) Responsable del reporte *
       .col-sm-4
