--- a/src/views/partials/flashMessages.pug
+++ b/src/views/partials/flashMessages.pug
@@ -1,16 +1,17 @@
--if(message)
-    .container.p-4
+
+if message
+    .container
         .row 
             .col-md-4-mx-auto 
                 .alert.alert-danger.alert-dismissible.fade.show(role="alert")
-                    !={message} 
+                    #{message}
                     button(type="button" class="close" data-dismiss="alert" aria-label="Close")
                         span(aria-hidden="true") &times;
--if(success)
-    .container.p-4
+if success 
+    .container
         .row 
             .col-md-4-mx-auto 
-                .alert.alert-danger.alert-dismissible.fade.show(role="alert")
-                    !={success} 
+                .alert.alert-success.alert-dismissible.fade.show(role="alert")
+                    #{success} 
                     button(type="button" class="close" data-dismiss="alert" aria-label="Close")
                         span(aria-hidden="true") &times;
