se añadió node pdf y paquetes necesarios

--- a/src/views/infoGeneral.pug
+++ b/src/views/infoGeneral.pug
@@ -8,12 +8,12 @@ body
 include partials/navSesion.pug
 .containerText
   h5.titulos
-    | Informaci&oacute;n General 
+    | Informaci&oacute;n General
   .combineLabelInput.centerForm
     .form-group.row
       label.col-form-label.col-md-3 Dependencia politécnica&nbsp;
       .col-sm-4
-        input.form-control.h-75(type="text" disabled="disabled" placeholder= {user})
+        input.form-control.h-75(type="text" disabled="disabled" placeholder = "usuario")
     .form-group.row
       label.col-form-label.col-md-3(required) Responsable del reporte *
       .col-sm-4
