--- a/src/views/partials/flashMessages.pug
+++ b/src/views/partials/flashMessages.pug
@@ -4,14 +4,14 @@ if message
         .row 
             .col-md-4-mx-auto 
                 .alert.alert-danger.alert-dismissible.fade.show(role="alert")
-                    #{message}
+                    message
                     button(type="button" class="close" data-dismiss="alert" aria-label="Close")
                         span(aria-hidden="true") &times;
-if success 
+if !success 
     .container
         .row 
             .col-md-4-mx-auto 
                 .alert.alert-success.alert-dismissible.fade.show(role="alert")
-                    #{success} 
+                    success 
                     button(type="button" class="close" data-dismiss="alert" aria-label="Close")
                         span(aria-hidden="true") &times;
